--- a/index_login_signup.html
+++ b/index_login_signup.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Sign in to your account</h1>
+    <h1>Snap and Save</h1>
     <div class="container">
         <div class="login-signup-forgot">
             <span>
