--- a/index_main.html
+++ b/index_main.html
@@ -16,9 +16,9 @@
         <div class="logo">Snap<br>and<br>Save</div>
         <hr>
         <div class="tabs">
-            <img id="icons" src="resources/analytics_w.png" alt="Analytics">
-            <img id="icons" src="resources/photo_w.png" alt="Upload">
-            <img id="icons" src="resources/profile_w.png" alt="Profile">
+            <img id="analytics" class="icons" src="resources/analytics_w.png" alt="Analytics">
+            <img id="photo" class="icons" src="resources/photo_w.png" alt="Upload">
+            <img id="profile" class="icons" src="resources/profile_w.png" alt="Profile">
             <div class="bubble"></div>
             <div class="bar"></div>
         </div>
@@ -27,9 +27,7 @@
             <img id="icon-logout" src="resources/logout_w.png" alt="Logout">
         </div>
     </nav>
-    <div class="container">
-        This is the display area
-    </div>
+    <div class="container"></div>
     <script src="script_main.js"></script>
 </body>
 
