--- a/index_login_signup.html
+++ b/index_login_signup.html
@@ -22,7 +22,7 @@
             <span id="forgot">Forgot</span>
         </div>
         <div class="arrow-up point-signin"></div>
-        <form class="inputs" action="" method="post"></form>
+        <form class="inputs" action="" method="POST"></form>
     </div>
     <script src="script_login_signup.js"></script>
 </body>
