data viz on dummy data

--- a/index_main.html
+++ b/index_main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style_main.css">
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <title>Snap and Save</title>
 </head>
 
@@ -24,10 +25,11 @@
         </div>
         <hr>
         <div class="logout">
-            <img id="icon-logout" src="resources/logout_w.png" alt="Logout">
+            <a href="index_login_signup.html"><img id="icon-logout" src="resources/logout_w.png" alt="Logout"></a>
         </div>
     </nav>
     <div class="container"></div>
+    <script src="visualization.js"></script>
     <script src="script_main.js"></script>
 </body>
 
