--- a/index_login_signup.html
+++ b/index_login_signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style_login_signup.css">
+    <link rel="stylesheet" href="media_queries_login_signup.css">
     <title>Snap and Save</title>
 </head>
 
